add create trip rpci, add authuser
