# db/sqlc/trip_requests.sql.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.22.0
+//   sqlc v1.19.0
 // source: trip_requests.sql
 
 package db
@@ -9,8 +9,8 @@ import (
 	"context"
 )
 
-const createTripRequest = `-- name: CreateTripRequest :one
-INSERT INTO trip_requests (
+const createTripApplication = `-- name: CreateTripApplication :one
+INSERT INTO trip_applications (
     trip_id,
     passenger_id,
     boarding_station,
@@ -22,7 +22,7 @@ INSERT INTO trip_requests (
 )RETURNING id, trip_id, passenger_id, boarding_station, payment_type, currency, contact_info, approved, created_at
 `
 
-type CreateTripRequestParams struct {
+type CreateTripApplicationParams struct {
 	TripID          int64  `json:"trip_id"`
 	PassengerID     int64  `json:"passenger_id"`
 	BoardingStation int64  `json:"boarding_station"`
@@ -31,8 +31,8 @@ type CreateTripRequestParams struct {
 	ContactInfo     string `json:"contact_info"`
 }
 
-func (q *Queries) CreateTripRequest(ctx context.Context, arg CreateTripRequestParams) (TripRequest, error) {
-	row := q.db.QueryRow(ctx, createTripRequest,
+func (q *Queries) CreateTripApplication(ctx context.Context, arg CreateTripApplicationParams) (TripApplication, error) {
+	row := q.db.QueryRow(ctx, createTripApplication,
 		arg.TripID,
 		arg.PassengerID,
 		arg.BoardingStation,
@@ -40,7 +40,7 @@ func (q *Queries) CreateTripRequest(ctx context.Context, arg CreateTripRequestPa
 		arg.Currency,
 		arg.ContactInfo,
 	)
-	var i TripRequest
+	var i TripApplication
 	err := row.Scan(
 		&i.ID,
 		&i.TripID,
@@ -55,24 +55,24 @@ func (q *Queries) CreateTripRequest(ctx context.Context, arg CreateTripRequestPa
 	return i, err
 }
 
-const deleteTripRequest = `-- name: DeleteTripRequest :exec
-DELETE FROM trip_requests
+const deleteTripApplication = `-- name: DeleteTripApplication :exec
+DELETE FROM trip_applications
 WHERE id = $1
 `
 
-func (q *Queries) DeleteTripRequest(ctx context.Context, id int64) error {
-	_, err := q.db.Exec(ctx, deleteTripRequest, id)
+func (q *Queries) DeleteTripApplication(ctx context.Context, id int64) error {
+	_, err := q.db.Exec(ctx, deleteTripApplication, id)
 	return err
 }
 
-const getTripRequest = `-- name: GetTripRequest :one
-SELECT id, trip_id, passenger_id, boarding_station, payment_type, currency, contact_info, approved, created_at FROM trip_requests
+const getTripApplication = `-- name: GetTripApplication :one
+SELECT id, trip_id, passenger_id, boarding_station, payment_type, currency, contact_info, approved, created_at FROM trip_applications
 WHERE id = $1 LIMIT 1
 `
 
-func (q *Queries) GetTripRequest(ctx context.Context, id int64) (TripRequest, error) {
-	row := q.db.QueryRow(ctx, getTripRequest, id)
-	var i TripRequest
+func (q *Queries) GetTripApplication(ctx context.Context, id int64) (TripApplication, error) {
+	row := q.db.QueryRow(ctx, getTripApplication, id)
+	var i TripApplication
 	err := row.Scan(
 		&i.ID,
 		&i.TripID,
@@ -87,28 +87,28 @@ func (q *Queries) GetTripRequest(ctx context.Context, id int64) (TripRequest, er
 	return i, err
 }
 
-const listTripRequests = `-- name: ListTripRequests :many
-SELECT id, trip_id, passenger_id, boarding_station, payment_type, currency, contact_info, approved, created_at FROM trip_requests
+const listTripApplications = `-- name: ListTripApplications :many
+SELECT id, trip_id, passenger_id, boarding_station, payment_type, currency, contact_info, approved, created_at FROM trip_applications
 WHERE trip_id = $1
 ORDER BY created_at
 LIMIT $2 OFFSET $3
 `
 
-type ListTripRequestsParams struct {
+type ListTripApplicationsParams struct {
 	TripID int64 `json:"trip_id"`
 	Limit  int32 `json:"limit"`
 	Offset int32 `json:"offset"`
 }
 
-func (q *Queries) ListTripRequests(ctx context.Context, arg ListTripRequestsParams) ([]TripRequest, error) {
-	rows, err := q.db.Query(ctx, listTripRequests, arg.TripID, arg.Limit, arg.Offset)
+func (q *Queries) ListTripApplications(ctx context.Context, arg ListTripApplicationsParams) ([]TripApplication, error) {
+	rows, err := q.db.Query(ctx, listTripApplications, arg.TripID, arg.Limit, arg.Offset)
 	if err != nil {
 		return nil, err
 	}
 	defer rows.Close()
-	items := []TripRequest{}
+	items := []TripApplication{}
 	for rows.Next() {
-		var i TripRequest
+		var i TripApplication
 		if err := rows.Scan(
 			&i.ID,
 			&i.TripID,
