# docs/swagger/peakpal_carpool.swagger.json
@@ -12,7 +12,14 @@
   "tags": [
     {
       "name": "Carpool"
+    },
+    {
+      "name": "PeekPal"
     }
+  ],
+  "schemes": [
+    "http",
+    "https"
   ],
   "consumes": [
     "application/json"
@@ -57,6 +64,45 @@
     }
   },
   "definitions": {
+    "pbAuthorizeUserResponse": {
+      "type": "object",
+      "properties": {
+        "ID": {
+          "type": "string"
+        },
+        "userId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "issuedAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "expiredAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "pbCountry": {
+      "type": "object",
+      "properties": {
+        "ID": {
+          "type": "string",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "countryCode": {
+          "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
     "pbCreateTripRequest": {
       "type": "object",
       "properties": {
@@ -88,6 +134,13 @@
         "currency": {
           "type": "string"
         },
+        "roundTrip": {
+          "type": "boolean"
+        },
+        "returnAt": {
+          "type": "string",
+          "format": "date-time"
+        },
         "departureAt": {
           "type": "string",
           "format": "date-time"
@@ -99,6 +152,88 @@
       "properties": {
         "trip": {
           "$ref": "#/definitions/pbTrip"
+        }
+      }
+    },
+    "pbGetCountryResponse": {
+      "type": "object",
+      "properties": {
+        "Country": {
+          "$ref": "#/definitions/pbCountry"
+        }
+      }
+    },
+    "pbGetResortResponse": {
+      "type": "object",
+      "properties": {
+        "resort": {
+          "$ref": "#/definitions/pbResort"
+        }
+      }
+    },
+    "pbListCountriesResponse": {
+      "type": "object",
+      "properties": {
+        "Country": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/pbCountry"
+          }
+        },
+        "limit": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "offset": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "total": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "pbListResortsResponse": {
+      "type": "object",
+      "properties": {
+        "resort": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/pbResort"
+          }
+        },
+        "limit": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "offset": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "total": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "pbResort": {
+      "type": "object",
+      "properties": {
+        "ID": {
+          "type": "string",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "country": {
+          "type": "string",
+          "format": "int64"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
         }
       }
     },
@@ -137,6 +272,13 @@
         "currency": {
           "type": "string"
         },
+        "roundTrip": {
+          "type": "boolean"
+        },
+        "returnAt": {
+          "type": "string",
+          "format": "date-time"
+        },
         "departureAt": {
           "type": "string",
           "format": "date-time"
@@ -174,5 +316,18 @@
         }
       }
     }
-  }
+  },
+  "securityDefinitions": {
+    "bearer": {
+      "type": "apiKey",
+      "description": "Authentication token, prefixed by Bearer: Bearer \u003ctoken\u003e",
+      "name": "Authorization",
+      "in": "header"
+    }
+  },
+  "security": [
+    {
+      "bearer": []
+    }
+  ]
 }
